# Photron

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Photron.sln  README.md  TODO.md  run-debug.bat  run-release.bat  vcpkg.json
MCML_C17/: MCML_C17.vcxproj
MCML_C17/Source/: mcml.h
Photron/: Photron.vcxproj  Photron.vcxproj.bak  Photron.vcxproj.filters
Photron/Source/: App.cpp  App.hpp  Main.cpp  Renderer.cpp  Renderer.hpp
config/: absorption.toml  ani.in  anisotropy.toml  box.in  config-exp10.in  config-exp13.in  config-exp15.in  config-exp9-1-test.in  config-exp9-1.in  config-exp9-2.in  config-exp9-3.in  config1.in  config2.in  config3.in  config4.in  default.toml  exp1.in  exp2.in  exp3.in  exp4.in  exp5.in  exp6.in  inner-scatter.in  inner.in  interface.in  interface.toml  mcml_test.mci  mixed.in  mixed.toml  multi-photon-100.in  multi-photon-test.in  multi.in  multilayer.toml  mus.in  nabla.in  nested-scatter.toml  nested.toml  pyramid.toml  scatter-back.toml  scatter-forward.toml  (+12 more)
doc/: ARCHITECTURE.md  MCML_ANALYSIS.md  README.build.md  README.md
mcml17/: mcml17.vcxproj  mcml17.vcxproj.filters
mcml17/Source/: go.c
mcml_c17/: mcml_c17.vcxproj
mcml_c17/Resources/: sample1.mci  template.mci
mcml_c17/Source/: io.c  main.c
mcml_cpp20/: mcml_cpp20.vcxproj  mcml_cpp20.vcxproj.filters
mcml_cpp20/Resources/: sample1.mci  sample2.mci  template.mci
mcml_cpp20/Source/: cin_reader.cpp  cin_reader.hpp  cin_reader.tpp  cout_writer.hpp  exception.hpp  main.cpp  mcml.hpp  random.hpp  reader.cpp  reader.hpp  reader.tpp  reader_util.cpp  reader_util.hpp  simulator.cpp  simulator.hpp  timer.hpp  tracer.cpp  tracer.hpp  writer.cpp  writer.hpp
mcmlpp/: mcmlpp.vcxproj  mcmlpp.vcxproj.filters
mcmlpp/Source/: cin_reader.cpp  cout_writer.hpp  go.cpp  io.cpp  main.cpp  mcml.hpp  random.hpp  reader.cpp  reader.hpp  simulator.cpp  timer.hpp  tracer.cpp  writer.cpp  writer.hpp
shaders/: basic.frag  basic.vert  lines.frag  lines.vert  lines_instanced.frag  lines_instanced.vert  points.frag  points.vert  points_instanced.frag  points_instanced.vert  triangles.frag  triangles.vert  voxels.frag  voxels.vert
src/: app.cpp  app.hpp  camera.cpp  camera.hpp  main.cpp  overlay.cpp  overlay.hpp
src/common/: config.cpp  config.hpp  error_handler.cpp  error_handler.hpp  error_types.hpp  file_utils.cpp  file_utils.hpp  logger.cpp  logger.hpp  optimized_logger.hpp  result.hpp  results_exporter.cpp  results_exporter.hpp
src/math/: bvh.cpp  bvh.hpp  concepts.hpp  cuboid.cpp  cuboid.hpp  dda.cpp  dda.hpp  geometric_utils.hpp  glm_types.hpp  math.hpp  mesh_geometry.cpp  mesh_geometry.hpp  numerical_constants.hpp  random.hpp  range.hpp  ray.cpp  ray.hpp  triangle.cpp  triangle.hpp  vertex.hpp  voxel_clipper.cpp  voxel_clipper.hpp  voxel_clipper_3d.cpp  voxel_clipper_3d.hpp  voxel_dda3d.cpp  voxel_dda3d.hpp  voxel_grid.cpp  voxel_grid.hpp  voxel_volume.cpp  voxel_volume.hpp  voxel_volume_calculator.cpp  voxel_volume_calculator.hpp
src/renderer/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  geom_renderer.cpp  geom_renderer.hpp  geometry_renderer.cpp  geometry_renderer.hpp  index_buffer.hpp  input_handler.cpp  input_handler.hpp  label_renderer.cpp  label_renderer.hpp  mesh.cpp  mesh.hpp  overlay.cpp  overlay.hpp  path_instance.hpp  path_renderer.cpp  path_renderer.hpp  render_setup.hpp  renderer.cpp  renderer.hpp  settings.hpp  shader.cpp  shader.hpp  shader_manager.cpp  shader_manager.hpp  shader_utils.cpp  shader_utils.hpp  vertex.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.hpp  voxel_renderer.cpp  voxel_renderer.hpp  window.cpp  window.hpp
src/simulator/: aggregator.cpp  aggregator.hpp  config.cpp  config.hpp  config_backup.hpp  config_service.cpp  config_service.hpp  debug_logger.hpp  geom_lookup.cpp  geom_lookup.hpp  graph.hpp  initializer.cpp  layer.cpp  layer.hpp  logger.cpp  logger.hpp  material.cpp  material.hpp  medium.cpp  medium.hpp  metrics.cpp  metrics.hpp  photon.cpp  photon.hpp  photon_node.hpp  photon_path.hpp  random.hpp  record.hpp  simulator.cpp  simulator.hpp  source.hpp  tissue.hpp  transport.cpp  transport.hpp  volume.cpp  volume.hpp  volume_backup.hpp  voxel.hpp
src/structs/: camera.hpp  config.hpp  cuboid.hpp  glm_types.hpp  graph.hpp  grid3d.hpp  index3.hpp  keyboard.hpp  layer.hpp  line.hpp  mouse.hpp  photon.hpp  point2.hpp  point3.hpp  point4.hpp  quadrilateral.hpp  range1.hpp  range3.hpp  ray.hpp  record.hpp  segment.hpp  settings.hpp  source.hpp  tissue.hpp  triangle.hpp  vector3.hpp  vertex.hpp  voxel.hpp  window.hpp  window_size.hpp
src/utilities/: experimenter.cpp  experimenter.hpp  utilities.cpp  utilities.hpp
